Involve auth process: add verification email with VerificationToken, add reset password by email with PasswordResetToken, involve user, add RegistrationCompleteEvent

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
   sql:
     init:
@@ -10,6 +10,17 @@ spring:
     compose:
       stop:
         command: down
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username:
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 application:
   security:
     jwt:
