--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   psql-db:
-    image: postgres
+    image: postgres:15
     container_name: psql-db
     restart: always
     environment:
